--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-list-endpoints": "^6.0.0",
+    "@types/jest": "^29.0.3",
+    "express": "^4.18.1",
+    "jest": "^29.0.3",
+    "ts-jest": "^29.0.1",
     "typescript": "^4.7.2"
   },
   "dependencies": {
